antlr/LittleDuckParser.py
# Generated from LittleDuck.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class LittleDuckParser ( Parser ):

    grammarFileName = "LittleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'program'", u"';'", u"'var'", u"':'", 
                     u"','", u"'ID'", u"'{'", u"'}'", u"'='", u"'if'", u"'('", 
                     u"')'", u"'else'", u"'<'", u"'>'", u"'<>'", u"'+'", 
                     u"'-'", u"'*'", u"'/'", u"'int'", u"'float'", u"'print'", 
                     u"<INVALID>", u"<INVALID>", u"'i'", u"'f'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"ID", u"STRING", u"CTE_I", u"CTE_F", u"WHITESPACE" ]

    RULE_program = 0
    RULE_varsRule = 1
    RULE_var1 = 2
    RULE_var2 = 3
    RULE_var3 = 4
    RULE_bloque = 5
    RULE_bloq1 = 6
    RULE_estatuto = 7
    RULE_asignacion = 8
    RULE_condicion = 9
    RULE_cond1 = 10
    RULE_expresion = 11
    RULE_expr1 = 12
    RULE_expr2 = 13
    RULE_exp = 14
    RULE_exp1 = 15
    RULE_termino = 16
    RULE_term1 = 17
    RULE_tipo = 18
    RULE_escritura = 19
    RULE_print1 = 20
    RULE_print2 = 21
    RULE_factor = 22
    RULE_var_cte = 23

    ruleNames =  [ u"program", u"varsRule", u"var1", u"var2", u"var3", u"bloque", 
                   u"bloq1", u"estatuto", u"asignacion", u"condicion", u"cond1", 
                   u"expresion", u"expr1", u"expr2", u"exp", u"exp1", u"termino", 
                   u"term1", u"tipo", u"escritura", u"print1", u"print2", 
                   u"factor", u"var_cte" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    ID=24
    STRING=25
    CTE_I=26
    CTE_F=27
    WHITESPACE=28

    def __init__(self, input, output=sys.stdout):
        super(LittleDuckParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def varsRule(self):
            return self.getTypedRuleContext(LittleDuckParser.VarsRuleContext,0)


        def bloque(self):
            return self.getTypedRuleContext(LittleDuckParser.BloqueContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = LittleDuckParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(LittleDuckParser.T__0)
            self.state = 49
            self.match(LittleDuckParser.ID)
            self.state = 50
            self.match(LittleDuckParser.T__1)
            self.state = 51
            self.varsRule()
            self.state = 52
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsRuleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.VarsRuleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var1(self):
            return self.getTypedRuleContext(LittleDuckParser.Var1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_varsRule

        def enterRule(self, listener):
            if hasattr(listener, "enterVarsRule"):
                listener.enterVarsRule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVarsRule"):
                listener.exitVarsRule(self)




    def varsRule(self):

        localctx = LittleDuckParser.VarsRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varsRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(LittleDuckParser.T__2)
            self.state = 55
            self.var1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Var1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def var2(self):
            return self.getTypedRuleContext(LittleDuckParser.Var2Context,0)


        def tipo(self):
            return self.getTypedRuleContext(LittleDuckParser.TipoContext,0)


        def var3(self):
            return self.getTypedRuleContext(LittleDuckParser.Var3Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_var1

        def enterRule(self, listener):
            if hasattr(listener, "enterVar1"):
                listener.enterVar1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar1"):
                listener.exitVar1(self)




    def var1(self):

        localctx = LittleDuckParser.Var1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(LittleDuckParser.ID)
            self.state = 58
            self.var2()
            self.state = 59
            self.match(LittleDuckParser.T__3)
            self.state = 60
            self.tipo()
            self.state = 61
            self.match(LittleDuckParser.T__1)
            self.state = 62
            self.var3()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var2Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Var2Context, self).__init__(parent, invokingState)
            self.parser = parser

        def var2(self):
            return self.getTypedRuleContext(LittleDuckParser.Var2Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_var2

        def enterRule(self, listener):
            if hasattr(listener, "enterVar2"):
                listener.enterVar2(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar2"):
                listener.exitVar2(self)




    def var2(self):

        localctx = LittleDuckParser.Var2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var2)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(LittleDuckParser.T__4)
                self.state = 65
                self.match(LittleDuckParser.T__5)
                self.state = 66
                self.var2()
                pass
            elif token in [LittleDuckParser.T__3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var3Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Var3Context, self).__init__(parent, invokingState)
            self.parser = parser

        def var1(self):
            return self.getTypedRuleContext(LittleDuckParser.Var1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_var3

        def enterRule(self, listener):
            if hasattr(listener, "enterVar3"):
                listener.enterVar3(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar3"):
                listener.exitVar3(self)




    def var3(self):

        localctx = LittleDuckParser.Var3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var3)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__6]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [LittleDuckParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.var1()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.BloqueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def bloq1(self):
            return self.getTypedRuleContext(LittleDuckParser.Bloq1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_bloque

        def enterRule(self, listener):
            if hasattr(listener, "enterBloque"):
                listener.enterBloque(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBloque"):
                listener.exitBloque(self)




    def bloque(self):

        localctx = LittleDuckParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(LittleDuckParser.T__6)
            self.state = 75
            self.bloq1()
            self.state = 76
            self.match(LittleDuckParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bloq1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Bloq1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(LittleDuckParser.EstatutoContext,0)


        def bloq1(self):
            return self.getTypedRuleContext(LittleDuckParser.Bloq1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_bloq1

        def enterRule(self, listener):
            if hasattr(listener, "enterBloq1"):
                listener.enterBloq1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBloq1"):
                listener.exitBloq1(self)




    def bloq1(self):

        localctx = LittleDuckParser.Bloq1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloq1)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__9, LittleDuckParser.T__22, LittleDuckParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.estatuto()
                self.state = 79
                self.bloq1()
                pass
            elif token in [LittleDuckParser.T__7]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EstatutoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.EstatutoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(LittleDuckParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(LittleDuckParser.CondicionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(LittleDuckParser.EscrituraContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_estatuto

        def enterRule(self, listener):
            if hasattr(listener, "enterEstatuto"):
                listener.enterEstatuto(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEstatuto"):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = LittleDuckParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estatuto)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.asignacion()
                pass
            elif token in [LittleDuckParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.condicion()
                pass
            elif token in [LittleDuckParser.T__22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.escritura()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.AsignacionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_asignacion

        def enterRule(self, listener):
            if hasattr(listener, "enterAsignacion"):
                listener.enterAsignacion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAsignacion"):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = LittleDuckParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LittleDuckParser.ID)
            self.state = 90
            self.match(LittleDuckParser.T__8)
            self.state = 91
            self.expresion()
            self.state = 92
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.CondicionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpresionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(LittleDuckParser.BloqueContext,0)


        def cond1(self):
            return self.getTypedRuleContext(LittleDuckParser.Cond1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_condicion

        def enterRule(self, listener):
            if hasattr(listener, "enterCondicion"):
                listener.enterCondicion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCondicion"):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = LittleDuckParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(LittleDuckParser.T__9)
            self.state = 95
            self.match(LittleDuckParser.T__10)
            self.state = 96
            self.expresion()
            self.state = 97
            self.match(LittleDuckParser.T__11)
            self.state = 98
            self.bloque()
            self.state = 99
            self.cond1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cond1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Cond1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(LittleDuckParser.BloqueContext,0)


        def cond1(self):
            return self.getTypedRuleContext(LittleDuckParser.Cond1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_cond1

        def enterRule(self, listener):
            if hasattr(listener, "enterCond1"):
                listener.enterCond1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCond1"):
                listener.exitCond1(self)




    def cond1(self):

        localctx = LittleDuckParser.Cond1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cond1)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(LittleDuckParser.T__1)
                pass
            elif token in [LittleDuckParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(LittleDuckParser.T__12)
                self.state = 103
                self.bloque()
                self.state = 104
                self.cond1()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.ExpresionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpContext,0)


        def expr1(self):
            return self.getTypedRuleContext(LittleDuckParser.Expr1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_expresion

        def enterRule(self, listener):
            if hasattr(listener, "enterExpresion"):
                listener.enterExpresion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpresion"):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = LittleDuckParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.exp()
            self.state = 109
            self.expr1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Expr1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def expr2(self):
            return self.getTypedRuleContext(LittleDuckParser.Expr2Context,0)


        def exp(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_expr1

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr1"):
                listener.enterExpr1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr1"):
                listener.exitExpr1(self)




    def expr1(self):

        localctx = LittleDuckParser.Expr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr1)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__1, LittleDuckParser.T__4, LittleDuckParser.T__11]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [LittleDuckParser.T__13, LittleDuckParser.T__14, LittleDuckParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.expr2()
                self.state = 113
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr2Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Expr2Context, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_expr2

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr2"):
                listener.enterExpr2(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr2"):
                listener.exitExpr2(self)




    def expr2(self):

        localctx = LittleDuckParser.Expr2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expr2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LittleDuckParser.T__13) | (1 << LittleDuckParser.T__14) | (1 << LittleDuckParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.ExpContext, self).__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(LittleDuckParser.TerminoContext,0)


        def exp1(self):
            return self.getTypedRuleContext(LittleDuckParser.Exp1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exp

        def enterRule(self, listener):
            if hasattr(listener, "enterExp"):
                listener.enterExp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExp"):
                listener.exitExp(self)




    def exp(self):

        localctx = LittleDuckParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.termino()
            self.state = 120
            self.exp1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Exp1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exp1

        def enterRule(self, listener):
            if hasattr(listener, "enterExp1"):
                listener.enterExp1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExp1"):
                listener.exitExp1(self)




    def exp1(self):

        localctx = LittleDuckParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_exp1)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__1, LittleDuckParser.T__4, LittleDuckParser.T__11, LittleDuckParser.T__13, LittleDuckParser.T__14, LittleDuckParser.T__15]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [LittleDuckParser.T__16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(LittleDuckParser.T__16)
                self.state = 124
                self.exp()
                pass
            elif token in [LittleDuckParser.T__17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(LittleDuckParser.T__17)
                self.state = 126
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.TerminoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(LittleDuckParser.FactorContext,0)


        def term1(self):
            return self.getTypedRuleContext(LittleDuckParser.Term1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_termino

        def enterRule(self, listener):
            if hasattr(listener, "enterTermino"):
                listener.enterTermino(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTermino"):
                listener.exitTermino(self)




    def termino(self):

        localctx = LittleDuckParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_termino)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.factor()
            self.state = 130
            self.term1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Term1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Term1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(LittleDuckParser.TerminoContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_term1

        def enterRule(self, listener):
            if hasattr(listener, "enterTerm1"):
                listener.enterTerm1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTerm1"):
                listener.exitTerm1(self)




    def term1(self):

        localctx = LittleDuckParser.Term1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_term1)
        self._la = 0 # Token type
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__18, LittleDuckParser.T__19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==LittleDuckParser.T__18 or _la==LittleDuckParser.T__19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.termino()
                pass
            elif token in [LittleDuckParser.T__1, LittleDuckParser.T__4, LittleDuckParser.T__11, LittleDuckParser.T__13, LittleDuckParser.T__14, LittleDuckParser.T__15, LittleDuckParser.T__16, LittleDuckParser.T__17]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.TipoContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_tipo

        def enterRule(self, listener):
            if hasattr(listener, "enterTipo"):
                listener.enterTipo(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTipo"):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LittleDuckParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==LittleDuckParser.T__20 or _la==LittleDuckParser.T__21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EscrituraContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.EscrituraContext, self).__init__(parent, invokingState)
            self.parser = parser

        def print1(self):
            return self.getTypedRuleContext(LittleDuckParser.Print1Context,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_escritura

        def enterRule(self, listener):
            if hasattr(listener, "enterEscritura"):
                listener.enterEscritura(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEscritura"):
                listener.exitEscritura(self)




    def escritura(self):

        localctx = LittleDuckParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LittleDuckParser.T__22)
            self.state = 140
            self.match(LittleDuckParser.T__10)
            self.state = 141
            self.print1()
            self.state = 142
            self.match(LittleDuckParser.T__11)
            self.state = 143
            self.match(LittleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print1Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Print1Context, self).__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpresionContext,0)


        def print2(self):
            return self.getTypedRuleContext(LittleDuckParser.Print2Context,0)


        def STRING(self):
            return self.getToken(LittleDuckParser.STRING, 0)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_print1

        def enterRule(self, listener):
            if hasattr(listener, "enterPrint1"):
                listener.enterPrint1(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrint1"):
                listener.exitPrint1(self)




    def print1(self):

        localctx = LittleDuckParser.Print1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_print1)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckParser.T__10, LittleDuckParser.T__18, LittleDuckParser.T__19, LittleDuckParser.ID, LittleDuckParser.CTE_I, LittleDuckParser.CTE_F]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.expresion()
                self.state = 146
                self.print2()
                pass
            elif token in [LittleDuckParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(LittleDuckParser.STRING)
                self.state = 149
                self.print2()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print2Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LittleDuckParser.Print2Context, self).__init__(parent, invokingState)
            self.parser = parser
